# hn_agent

./: .env.example  README.md  pyproject.toml
.kiro/steering/: product.md
app/: __init__.py
app/channels/: __init__.py  base.py  feishu.py  manager.py  message_bus.py  service.py  slack.py  store.py  telegram.py
app/gateway/: __init__.py  app.py  config.py  path_utils.py
config/: .gitignore
data/: checkpoints.db  checkpoints.db-shm  checkpoints.db-wal
docs/: agent-engine-analysis.md  channel-bridge-analysis.md  community-tools-analysis.md  config-system-analysis.md  gateway-api-analysis.md  guardrail-system-analysis.md  mcp-integration-analysis.md  memory-system-analysis.md  middleware-chain-analysis.md  model-factory-analysis.md  reflection-system-analysis.md  sandbox-system-analysis.md  skill-system-analysis.md  subagent-system-analysis.md  task.md  tool-system-analysis.md  upload-manager-analysis.md
hn_agent/: __init__.py  client.py  exceptions.py
hn_agent/agents/: __init__.py  factory.py  features.py  streaming.py  thread_state.py
hn_agent/community/: __init__.py
hn_agent/config/: __init__.py  loader.py  models.py
hn_agent/guardrails/: __init__.py  builtin.py  provider.py
hn_agent/mcp/: __init__.py  cache.py  client.py  oauth.py  tools.py
hn_agent/memory/: __init__.py  embedding.py  prompt.py  queue.py  storage.py  updater.py  vector_store.py
hn_agent/models/: __init__.py  anthropic_provider.py  base_provider.py  credential_loader.py  deepseek_provider.py  factory.py  google_provider.py  minimax_provider.py  openai_provider.py  qwen_provider.py
hn_agent/reflection/: __init__.py  resolvers.py
hn_agent/sandbox/: __init__.py  middleware.py  path_translator.py  provider.py  tools.py
hn_agent/skills/: __init__.py  installer.py  loader.py  parser.py  types.py  validation.py
hn_agent/subagents/: __init__.py  config.py  executor.py  registry.py
hn_agent/tools/: __init__.py  loader.py
hn_agent/uploads/: __init__.py  manager.py
tests/: __init__.py
(+111 files in other folders)
