[project]
name = "hn-agent"
version = "0.1.0"
description = "Harness Agent, a spec-driven agent"
authors = [
    {name = "shicc"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "chromadb>=1.0.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "hypothesis>=6.120.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
